--- a/views/admin/dashBoard.ejs
+++ b/views/admin/dashBoard.ejs
@@ -38,7 +38,7 @@
                     <i class="fas fa-shopping-cart"></i>
                     <span>Orders</span>
                 </a>
-                <a href="/admin/coupons" class="nav-item">
+                <a href="/admin//coupon" class="nav-item">
                     <i class="fas fa-tags"></i>
                     <span>Coupons</span>
                 </a>
@@ -181,7 +181,7 @@
             }
         });
 
-        // Bar Chart
+     
         const barCtx = document.getElementById('barChart').getContext('2d');
         new Chart(barCtx, {
             type: 'bar',
