--- a/views/user/allCategory.ejs
+++ b/views/user/allCategory.ejs
@@ -6,6 +6,20 @@
 
 
   <section class="container mx-auto py-16 px-4">
+
+
+  <nav class="text-sm font-medium text-gray-700 mb-6 ">
+    <ol class="list-reset flex">
+      <li>
+        <a href="/home" class="text-blue-600 hover:text-blue-700">Home</a>
+      </li>
+      <li class="mx-2">/</li>
+      <li class="text-gray-400">Category</li>
+    </ol>
+  </nav>
+  <br>
+
+
     <h2 class="text-3xl font-bold text-center mb-12 text-gray-800">Featured Categories</h2>
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
       <% categories.forEach((featured) => { %>
